syntax = "proto3";

import "google/protobuf/timestamp.proto";
option java_multiple_files = true;
option java_package = "com.example.kafkaproducer.schema";

message Account {
  int32 id = 1;
  string name = 2;
  string email = 3;
}
message Message{
  int32 id = 1;
  string to = 2;
  string toName = 3;
  string content = 4;
  bool status = 5;

}
message Stat {
  int32 id = 1;
  string message = 2;
  google.protobuf.Timestamp createdDate = 3;
  bool status = 4;
}
message StatId{
  int32 id = 1;
}
message AccountId{
  int32 id = 1;
}
message MessageId{
  int32 id = 1;
}
message ListAccount{
  repeated Account accounts = 1;
}
message ListMessage{
  repeated Message messages = 1;
}
message ListStat{
  repeated Stat stats = 1;
}
message nullParams {}
service AccountService{
  rpc getAccount (AccountId) returns (Account);
  rpc getAllAccount (nullParams) returns (ListAccount);
  rpc addAccount (Account) returns (Account);
}
service StatService{
  rpc getAllStat(nullParams) returns (ListStat);
}
service MessageService{

}